# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: github-actions.yml
task_manager/: .env  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_date_joined_label_creation_date.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_date_joined_status_creation_date.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_description.py  0003_task_labels.py  0004_alter_task_author_alter_task_labels_and_more.py  0005_remove_task_worker_task_executor_alter_task_author_and_more.py  0006_rename_date_joined_task_creation_date_and_more.py
task_manager/templates/: edit.html  index.html  login.html  registration.html  user_update.html  users.html
task_manager/templates/auth/: label_confirm_delete.html  status_confirm_delete.html  task_confirm_delete.html  user_confirm_delete.html
task_manager/templates/labels/: create.html  labels.html  update.html
task_manager/templates/statuses/: create.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  task.html  tasks.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
